Fix footer alignment and clean homepage layout structure

--- a/css/hsf.css
+++ b/css/hsf.css
@@ -151,6 +151,7 @@
 
 .footer {
   margin-bottom: 50px;
+  text-align: center;
 }
 
 .blog-footer {
